--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6208,7 +6208,11 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Jul 2025</TD>
 <TD>
 * NPH to Social Security office (status update, no new card) on 3rd.<br>
-* 
+* Saw 4th July fireworks in Towson (Loch Raven Technical Academy).<br>
+* Hiking at Merryman trail -- 10.30am to 12pm -- on 5th.<br>
+* Lunch at Subway, shopping at Walmart in 5th, Amazon return at Kohl's.<br>
+* HNH swimming class on 6th at 3.00pm.<br>
+* Shopping at Wegmans on 6th.<br>
 </HTML>                     
                        
                        
