--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6213,6 +6213,8 @@ PNH sightseeing on 5th-6th .<br>
 * Lunch at Subway, shopping at Walmart in 5th, Amazon return at Kohl's.<br>
 * HNH swimming class on 6th at 3.00pm.<br>
 * Shopping at Wegmans on 6th.<br>
+* Hirav missed flight so came home for ~24 hours on 6th night.<br>
+* PNH received the voter registration card on 7th.<br>
 </HTML>                     
                        
                        
