--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6191,6 +6191,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH UMBC Summer Enrichment Academy 1-week course (Life Skills for Success) -- 9am to 12pm, 23rd to 27th.<br>
 * NPH dental appointment (cleaning) on the 23rd.<br> 
 * PNH follow-up ear check-up (all good) on 25th.<br>
+* HNH swimming class on 25th at 7.30pm (make-up).<br>
 * PNH regular Dr appointment (June blood reports are normal) on 26th.<br>
 * PNH USCIS oath ceremony on 27th -- Officially US citizen, got Certificate of Naturalization.<br>
 * KPH-JPH booked a new apartment/flat (3BHK, Kameshwar) near NPV-PHV place in Abad on 27th.<br>
@@ -6207,14 +6208,19 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Jul 2025</TD>
 <TD>
+* HNH swimming class on 2nd at 7.30pm (make-up).<br>
 * NPH to Social Security office (status update, no new card) on 3rd.<br>
 * Saw 4th July fireworks in Towson (Loch Raven Technical Academy).<br>
 * Hiking at Merryman trail -- 10.30am to 12pm -- on 5th.<br>
 * Lunch at Subway, shopping at Walmart in 5th, Amazon return at Kohl's.<br>
 * HNH swimming class on 6th at 3.00pm.<br>
 * Shopping at Wegmans on 6th.<br>
-* Hirav missed flight so came home for ~24 hours on 6th night.<br>
+* Hirav missed flight so came home for ~24 hours on 6th night (left for Raleigh on 7th evening).<br>
 * PNH received the voter registration card on 7th.<br>
+* Mazda 4th service on 8th.<br>
+* HNH got an iPhone SE (3rd generation) and Mint Mobile plan on 8th (same number as Gabb, cancelled Gabb).<br>
+* PNH lunch with her school friends at Sangam on 9th.<br>
+* HNH swimming class on 9th at 7.30pm (make-up).<br>
 </HTML>                     
                        
                        
