--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6215,12 +6215,18 @@ PNH sightseeing on 5th-6th .<br>
 * Lunch at Subway, shopping at Walmart in 5th, Amazon return at Kohl's.<br>
 * HNH swimming class on 6th at 3.00pm.<br>
 * Shopping at Wegmans on 6th.<br>
+* NPH received a Renunciation/Surrender certificate and cancelled the Indian passport on 7th.<br>
 * Hirav missed flight so came home for ~24 hours on 6th night (left for Raleigh on 7th evening).<br>
 * PNH received the voter registration card on 7th.<br>
 * Mazda 4th service on 8th.<br>
 * HNH got an iPhone SE (3rd generation) and Mint Mobile plan on 8th (same number as Gabb, cancelled Gabb).<br>
 * PNH lunch with her school friends at Sangam on 9th.<br>
 * HNH swimming class on 9th at 7.30pm (make-up).<br>
+* PNH received US passport book (valid until 8-July-2035) on 11th.<br> 
+* Shopping at Swadesh on 11th, NPH OCI notary at UPS.<br>
+* NPH posted OCI application on 12th.<br>
+* Orioles baseball game at Camden Yards (section 352) on 12th -- 1.30pm to 7.30pm.<br>
+* Dinner pick-up from Papa John's on 12th.<br>
 </HTML>                     
                        
                        
