--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6227,6 +6227,9 @@ PNH sightseeing on 5th-6th .<br>
 * NPH posted OCI application on 12th.<br>
 * Orioles baseball game at Camden Yards (section 352) on 12th -- 1.30pm to 7.30pm.<br>
 * Dinner pick-up from Papa John's on 12th.<br>
+* HNH swimming class on 13th at 3.00pm.<br>
+* Paragbhai-Manan Anjaria family visited us for ~2 hours (4.15pm to 6.15pm) on 13th.<br>
+* Hirav came for ~24 hours (14th afternoon to 15th evening) on way to NJ.<br>
 </HTML>                     
                        
                        
