--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6230,6 +6230,10 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 13th at 3.00pm.<br>
 * Paragbhai-Manan Anjaria family visited us for ~2 hours (4.15pm to 6.15pm) on 13th.<br>
 * Hirav came for ~24 hours (14th afternoon to 15th evening) on way to NJ.<br>
+* HNH dental appointment (cavity) on 15th.<br>
+* PNH received US passport card (valid until 8-July-2035) on 15th.<br> 
+* HNH swimming class on 16th at 7.30pm (make-up, heavy rain/thunderstorm).<br>
+* PNH posted the application for Surrendering Indian passport on 17th.<br>
 </HTML>                     
                        
                        
