--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6234,6 +6234,11 @@ PNH sightseeing on 5th-6th .<br>
 * PNH received US passport card (valid until 8-July-2035) on 15th.<br> 
 * HNH swimming class on 16th at 7.30pm (make-up, heavy rain/thunderstorm).<br>
 * PNH posted the application for Surrendering Indian passport on 17th.<br>
+* Shopping at Mom's, Amazon return, and cake pick-up from Coldstone on 17th.<br>
+* Niraj-Darshini-Anaya visited for ~8 hours (9am to 5pm) on way to NJ/PA on 18th.<br>
+* HNH birthday -- Coldstone ice cream cake cutting, pau bhaji lunch on 18th.<br>
+* McDonald's brunch, home-made Pizza dinner on 19th, shopping at Dick's Sporting Goods, Aldi.<br>
+* 
 </HTML>                     
                        
                        
