--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6238,6 +6238,9 @@ PNH sightseeing on 5th-6th .<br>
 * Niraj-Darshini-Anaya visited for ~8 hours (9am to 5pm) on way to NJ/PA on 18th.<br>
 * HNH birthday -- Coldstone ice cream cake cutting, pau bhaji lunch on 18th.<br>
 * McDonald's brunch, home-made Pizza dinner on 19th, shopping at Dick's Sporting Goods, Aldi.<br>
+* HNH swimming class on 20th at 3.00pm.<br>
+* Shopping at Wegmans on 20th.<br>
+* HNH appointment with Dr. Kumar for annual checkup on 22nd (normal reports, eye check-up needed -- 1 HPV vaccine).<br>
 * 
 </HTML>                     
                        
