--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6241,7 +6241,9 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 20th at 3.00pm.<br>
 * Shopping at Wegmans on 20th.<br>
 * HNH appointment with Dr. Kumar for annual checkup on 22nd (normal reports, eye check-up needed -- 1 HPV vaccine).<br>
-* 
+* PNH to Social Security office (status update, no new card) on 23rd.<br>
+* HNH swimming class on 23rd at 7.30pm (make-up).<br>
+
 </HTML>                     
                        
                        
