--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6243,7 +6243,19 @@ PNH sightseeing on 5th-6th .<br>
 * HNH appointment with Dr. Kumar for annual checkup on 22nd (normal reports, eye check-up needed -- 1 HPV vaccine).<br>
 * PNH to Social Security office (status update, no new card) on 23rd.<br>
 * HNH swimming class on 23rd at 7.30pm (make-up).<br>
-
+* Shopping at Sam's club, dinner at Taco Bell on 26th.<br>
+* NPH-PNH 25th Wedding Anniversary on 27th -- dudhpak and thali lunch at home on 27th.<br>
+* Shopping at Wegmans (NPH-PNH) -- HNH at home -- on 27th.<br>
+* PNH dental appointment (cleaning) on 28th.<br>
+* HNH UMBC Summer Enrichment Academy 1-week course (Sports Broadcasting) -- 1pm to 4pm, 28th to 1st.<br>
+* PNH shopping at Food Lion and Swadesh on 28th.<br>
+* 
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Aug 2025</TD>
+<TD>
 </HTML>                     
                        
                        
