--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6249,12 +6249,15 @@ PNH sightseeing on 5th-6th .<br>
 * PNH dental appointment (cleaning) on 28th.<br>
 * HNH UMBC Summer Enrichment Academy 1-week course (Sports Broadcasting) -- 1pm to 4pm, 28th to 1st.<br>
 * PNH shopping at Food Lion and Swadesh on 28th.<br>
-* 
+* Shopping at Patel Brothers on 29th.<br>
+* Rented Chrysler Pacifica from Enterprise on 31st noon for 19 days.<br>
+* Bhuvan/Pratichi/Priyanshu/Namit visited us from 31st July to 17th August -- <a href="./trip_details/bhuvan_usa_trip_2025.txt">Details.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
 </TR>
 <TD>Aug 2025</TD>
+* 
 <TD>
 </HTML>                     
                        
