--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6257,6 +6257,8 @@ PNH sightseeing on 5th-6th .<br>
 <TD><HR></TD>
 </TR>
 <TD>Aug 2025</TD>
+* PNH shopping/returns at Walmart and Sam's club on 14th.<br>
+* Shopping at Wegmans on 15th.<br>
 * 
 <TD>
 </HTML>                     
