--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6259,6 +6259,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Aug 2025</TD>
 * PNH shopping/returns at Walmart and Sam's club on 14th.<br>
 * Shopping at Wegmans on 15th.<br>
+* Returned Enterprise rental car on 18th at 11.30am (drove total 2380 miles).<br>
 * 
 <TD>
 </HTML>                     
