--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6258,7 +6258,11 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Aug 2025</TD>
 * PNH shopping/returns at Walmart and Sam's club on 14th.<br>
 * Shopping at Wegmans on 15th.<br>
-* 
+* NPH received OCI on 20th.<br>
+* HNH swimming class on 20th at 7.30pm (make-up, NPH).<br>
+* Back to school night at CMS on 20th (PNH).<br>
+* PNH notary and shipping labels at UPS, posted OCI application on 22nd.<br>
+
 <TD>
 </HTML>                     
                        
