--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6262,6 +6262,10 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 20th at 7.30pm (make-up, NPH).<br>
 * Back to school night at CMS on 20th (PNH).<br>
 * PNH notary and shipping labels at UPS, posted OCI application on 22nd.<br>
+* HNH swimming class on 24th at 3.00pm.<br>
+* Shopping at Wegmans on 24th.<br>
+* HNH first day of 8th grade at CMS on 25th.<br>
+* PNH started working at WTES as a substitute on 25th.<br>
 
 <TD>
 </HTML>                     
