--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6268,7 +6268,13 @@ PNH sightseeing on 5th-6th .<br>
 * HNH first day of 8th grade at CMS on 25th.<br>
 * PNH started working at WTES as a substitute on 25th.<br>
 
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Sep 2025</TD>
 <TD>
+* 
 </HTML>                     
                        
                        
