--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6249,6 +6249,7 @@ PNH sightseeing on 5th-6th .<br>
 * PNH dental appointment (cleaning) on 28th.<br>
 * HNH UMBC Summer Enrichment Academy 1-week course (Sports Broadcasting) -- 1pm to 4pm, 28th to 1st.<br>
 * PNH shopping at Food Lion and Swadesh on 28th.<br>
+* NPH haircut by PNH on 29th.<br>
 * Shopping at Patel Brothers on 29th.<br>
 * Bhuvan/Pratichi/Priyanshu/Namit visited us from 31st July to 17th August -- <a href="./trip_details/bhuvan_usa_trip_2025.txt">Details.</TD>
 <TR>
@@ -6263,10 +6264,15 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 20th at 7.30pm (make-up, NPH).<br>
 * Back to school night at CMS on 20th (PNH).<br>
 * PNH notary and shipping labels at UPS, posted OCI application on 22nd.<br>
+* NPH-HNH haircut by PNH on 23rd.<br>
 * HNH swimming class on 24th at 3.00pm.<br>
 * Shopping at Wegmans on 24th.<br>
 * HNH first day of 8th grade at CMS on 25th.<br>
 * PNH started working at WTES as a substitute on 25th.<br>
+* Visited Annapolis, Sandy Point Park/Beach on 30th -- total 110 miles, 2pm to 9pm.<br>
+* Annapolis -- Capitol tour, walk on Main Street and waterfront harbor, Storm Bros. Ice cream .<br>
+* Dinner at Subway (Severna Park) on 30th.<br>
+* 
 
 <TR>
 <TD><HR></TD>
