--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6270,10 +6270,10 @@ PNH sightseeing on 5th-6th .<br>
 * HNH first day of 8th grade at CMS on 25th.<br>
 * PNH started working at WTES as a substitute on 25th.<br>
 * Visited Annapolis, Sandy Point Park/Beach on 30th -- total 110 miles, 2pm to 9pm.<br>
-* Annapolis -- Capitol tour, walk on Main Street and waterfront harbor, Storm Bros. Ice cream .<br>
+* Annapolis -- Capitol tour, walk on Main Street, waterfront harbor, Storm Bros. Ice cream .<br>
 * Dinner at Subway (Severna Park) on 30th.<br>
-* 
-
+* HNH swimming class on 31st at 3.00pm.<br>
+* Shopping at Wegmans on 31st.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
