--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6280,6 +6280,11 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Sep 2025</TD>
 <TD>
+* PNH worked at Timonium Elementary on 2nd.<br>
+* PNH worked at  Halstead Academy on 5th.<br> 
+* Orioles baseball game at Camden Yards (section 352) on 5th -- 5.15pm to 11.15pm.<br>
+* Orioles beat Dodgers 2-1 with a walk-off HR. Ohtani pitched and batted.<br>
+* Shopping at Sam's club on 6th.<br>
 * 
 </HTML>                     
                        
