--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6285,7 +6285,8 @@ PNH sightseeing on 5th-6th .<br>
 * Orioles baseball game at Camden Yards (section 352) on 5th -- 5.15pm to 11.15pm.<br>
 * Orioles beat Dodgers 2-1 with a walk-off HR. Ohtani pitched and batted.<br>
 * Shopping at Sam's club on 6th.<br>
-* 
+* HNH to PM Pediatric Urgent Care for blister bleeding -- 2 to 3.30pm -- on 7th.<br>
+* Shopping at Wegmans on 7th.<br>
 </HTML>                     
                        
                        
