--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6286,7 +6286,10 @@ PNH sightseeing on 5th-6th .<br>
 * Orioles beat Dodgers 2-1 with a walk-off HR. Ohtani pitched and batted.<br>
 * Shopping at Sam's club on 6th.<br>
 * HNH to PM Pediatric Urgent Care for blister bleeding -- 2 to 3.30pm -- on 7th.<br>
+* HNH has to wear index finger support for a few days so the blister heals.<br>
 * Shopping at Wegmans on 7th.<br>
+* HNH to PM Pediatric Urgent Care for follow-up on 13th -- all clear and healed.<br>
+* Dinner pick-up from Zaatar Mediterranean (Towson) on 13th.<br>
 </HTML>                     
                        
                        
