--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6290,6 +6290,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 7th.<br>
 * HNH to PM Pediatric Urgent Care for follow-up on 13th -- all clear and healed.<br>
 * Dinner pick-up from Zaatar Mediterranean (Towson) on 13th.<br>
+* Shopping at Wegmans on 14th.<br>
 </HTML>                     
                        
                        
