--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6291,6 +6291,8 @@ PNH sightseeing on 5th-6th .<br>
 * HNH to PM Pediatric Urgent Care for follow-up on 13th -- all clear and healed.<br>
 * Dinner pick-up from Zaatar Mediterranean (Towson) on 13th.<br>
 * Shopping at Wegmans on 14th.<br>
+* STScI Orioles game night at Camden Yards (section 324) on 18th.<br>
+* 
 </HTML>                     
                        
                        
