--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6292,7 +6292,9 @@ PNH sightseeing on 5th-6th .<br>
 * Dinner pick-up from Zaatar Mediterranean (Towson) on 13th.<br>
 * Shopping at Wegmans on 14th.<br>
 * STScI Orioles game night at Camden Yards (section 324) on 18th.<br>
-* 
+* HNH eye check-up at Target Optical on 20th (some increase in both eyes).<br>
+* HNH swimming class on 21st at 3.00pm.<br>
+* Shopping at Wegmans on 21st.<br>
 </HTML>                     
                        
                        
