--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6295,6 +6295,9 @@ PNH sightseeing on 5th-6th .<br>
 * HNH eye check-up at Target Optical on 20th (some increase in both eyes).<br>
 * HNH swimming class on 21st at 3.00pm.<br>
 * Shopping at Wegmans on 21st.<br>
+* HNH Play day (Badminton) at Ridgely on 27th.<br>
+* Shopping at Sam's club and picked up HNH glasses from Target on 27th.<br>
+* 
 </HTML>                     
                        
                        
