--- a/personal/memories.html
+++ b/personal/memories.html
@@ -4357,7 +4357,7 @@ PNH sightseeing on 5th-6th .<br>
 * Dinner pick-up from Subway (Towson downtown) on 22nd.<br>
 * Ordered online grocery from Wegmans on 22nd (curbside pick-up on 23rd).<br>
 * Dinner pick-up from MOD Pizza on 23rd.<br>
-* Bought Apple 13in MacBook Air laptop on 25th -- got AirPods (~$150) free.<br>
+* Bought Apple 13in MacBook Air laptop on 25th (for PNH) -- got AirPods (~$150) free.<br>
 * Dinner pick-up from Qdoba on 29th.<br>
 * Ordered online grocery from Sam's club on 29th (curbside pick-up on 30th).<br>
 * Schools-Universities opening / showing spikes -- 6,000,000+ (25,000,000+) cases and 185,000+ (850,000+) dead in US (World).</TD>
@@ -6297,7 +6297,9 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 21st.<br>
 * HNH Play day (Badminton) at Ridgely on 27th.<br>
 * Shopping at Sam's club and picked up HNH glasses from Target on 27th.<br>
-* 
+* Bought Apple 13in MacBook Air laptop on 28th (for NPH).<br>
+* HNH swimming class on 28th at 3.00pm.<br>
+* Shopping at Wegmans on 28th.<br>
 </HTML>                     
                        
                        
