--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6300,6 +6300,15 @@ PNH sightseeing on 5th-6th .<br>
 * Bought Apple 13in MacBook Air laptop on 28th (for NPH).<br>
 * HNH swimming class on 28th at 3.00pm.<br>
 * Shopping at Wegmans on 28th.<br>
+* STScI Job ended on 30th -- contract was not renewed because of budget concerns.</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Oct 2025</TD>
+<TD>
+* NPH applied for MD Unemployment Insurance (UI) benefits on 1st.<br>
+* 
 </HTML>                     
                        
                        
