--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6308,6 +6308,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Oct 2025</TD>
 <TD>
 * NPH applied for MD Unemployment Insurance (UI) benefits on 1st.<br>
+* Sundarkand Path at Urmil Druv's place on 4th -- 2.15pm to 7.30pm.<br>
 * 
 </HTML>                     
                        
