--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6309,6 +6309,9 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * NPH applied for MD Unemployment Insurance (UI) benefits on 1st.<br>
 * Sundarkand Path at Urmil Druv's place on 4th -- 2.15pm to 7.30pm.<br>
+* PNH received OCI on 4th.<br>
+* HNH swimming class on 5th at 3.00pm (NPH).<br>
+* PNH to help Debbie at her house on 5th -- 2pm to 4.30pm.<br>
 * 
 </HTML>                     
                        
