--- a/home_index.html
+++ b/home_index.html
@@ -32,7 +32,7 @@ TR:nth-child(even) {
 <Table>
 <TR><h3>
 <a href="https://mail.google.com/mail/#inbox">Gmail</a> -- <a href="http://mail.yahoo.com">Yahoo</a> --
-<a href="https://mail.stsci.edu/">STScI</a> -- <a href="http://email.asu.edu">ASU</a>
+<a href="http://email.asu.edu">ASU</a>
 </h3></TR>
 </Table>
 </center>
@@ -43,7 +43,7 @@ TR:nth-child(even) {
 <Table>
 <TR>
 <TH><h4>
-<a href="http://www.stsci.edu">STScI</a> -- <a href="https://aura.ultipro.com">UltiPro</a> -- <a href="https://proper.stsci.edu/">ProPer</a><br> 
+<a href="http://www.stsci.edu">STScI</a> -- <a href="https://n13.ultipro.com/login.aspx">UltiPro</a> -- <a href="https://proper.stsci.edu/">ProPer</a><br> 
 <a href="http://www.aas.org">AAS</a> -- <a href="http://www.iau.org/">IAU</a> -- <a href="http://www.astron-soc.in/">ASI</a> -- <a href="https://nspires.nasaprs.com/external/">NSPIRES</a>
 </h4></TH>
 
