--- a/home_index.html
+++ b/home_index.html
@@ -82,7 +82,7 @@ TR:nth-child(even) {
 </h4></TH>
 
 <TH><h4>
-<a href="http://sports.yahoo.com">Yahoo Sports</a> -- <a href="https://football.fantasysports.yahoo.com/"> NFL Fantasy</a> <br>
+<a href="http://sports.yahoo.com">Yahoo Sports</a><br> 
 <a href="https://www.espncricinfo.com/">Cric Info</a>
 </h4></TH> 
 </TR>
@@ -132,7 +132,7 @@ TR:nth-child(even) {
 <TH ALIGN=center><h4>
 <a href="https://secure.bge.com/MyAccount/MyBillUsage/pages/secure/MyBillUsage.aspx">BGE</a> -- <a href="https://myadt.com/">ADT</a> -- <a href="https://www.baltimorecountymd.gov/pay-bill">Water Bill</a><br>
 Mint <a href="http://www.mintmobile.com">Mobile</a> -- Verizon <a href="https://www.verizon.com/home/myverizon/">FIOS</a> <br>
-<a href="http://my.cigna.com/">Cigna</a>/<a href="https://cigna.identityforce.com">Identity Force</a> -- <a href="https://www.progressive.com">Progressive</a><br>
+<a href="https://myushg.ushealthgroup.com/?AspxAutoDetectCookieSupport=1">US Health</a> -- <a href="https://www.progressive.com">Progressive</a><br>
 <a href="https://midatlantic.aaa.com/">AAA</a> -- <a href="https://members.apsitinsurance.com/">NY Life</a>
 </h4></TH>
 
