--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6312,6 +6312,7 @@ PNH sightseeing on 5th-6th .<br>
 * PNH received OCI on 4th.<br>
 * HNH swimming class on 5th at 3.00pm (NPH).<br>
 * PNH to help Debbie at her house on 5th -- 2pm to 4.30pm.<br>
+* PNH started long-term substituting (until January) from 6th.<br>
 * 
 </HTML>                     
                        
