--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6313,7 +6313,20 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 5th at 3.00pm (NPH).<br>
 * PNH to help Debbie at her house on 5th -- 2pm to 4.30pm.<br>
 * PNH started long-term substituting (until January) from 6th.<br>
-* 
+* Dinner pick up from Papa Johns on 10th.<br>
+* Shopping at Patel Brothers and Sam's club on 11th.<br>
+* HNH swimming class on 12th at 3.00pm (HNH completed Swim Force, need to finish make-ups).<br>
+* HNH swimming class on 15th at 7.30pm (make-up).<br>
+* NPH started receiving MD UI payments ($430 per week) on 16th.<br>
+* NPH dental appointment (cleaning) on the 17th.<br> 
+* Shopping at Wegmans on 17th.<br>
+* PHV-NPV-CHV-HPV visited Baltimore from 18th to 20th.<br>
+* Came from Raleigh at 7.30pm on 18th.<br>
+* Rented Toyota Sienna from Enterprise on 18th afternoon for 2 days.<br>
+* Dhanteras puja and dinner together on 18th.<br>
+* Visited NJ -- Liberty state park, Edison, BAPS Mandir -- on 19th (11.45am to 11pm).<br>
+* PHV all left Baltimore at 11.45am on 20th.<br>
+* Rental car returned on 20th at 12.15pm (total 404 miles).<br>
 </HTML>                     
                        
                        
