--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6329,6 +6329,9 @@ PNH sightseeing on 5th-6th .<br>
 * PHV all left Baltimore at 11.45am on 20th.<br>
 * Rental car returned on 20th at 12.15pm (total 404 miles).<br>
 * NPH flu vaccine at Walgreens on 21st.<br>
+* HNH swimming class on 22nd at 7.30pm (make-up).<br>
+* NPH-HNH shopping at Sam's Club on 22nd.<br>
+* HNH flu vaccine at CVS (Minute Clinic) on 24th.<br>
 </HTML>                     
                        
                        
