--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6332,6 +6332,8 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 22nd at 7.30pm (make-up).<br>
 * NPH-HNH shopping at Sam's Club on 22nd.<br>
 * HNH flu vaccine at CVS (Minute Clinic) on 24th.<br>
+* Dinner pick up from Taco Bell on 24th.<br>
+* Shopping at Sam's Club on 25th.<br>
 </HTML>                     
                        
                        
