--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6334,6 +6334,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH flu vaccine at CVS (Minute Clinic) on 24th.<br>
 * Dinner pick up from Taco Bell on 24th.<br>
 * Shopping at Sam's Club on 25th.<br>
+* HNH swimming class on 26th at 3.00pm.<br>
 </HTML>                     
                        
                        
