--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6335,6 +6335,14 @@ PNH sightseeing on 5th-6th .<br>
 * Dinner pick up from Taco Bell on 24th.<br>
 * Shopping at Sam's Club on 25th.<br>
 * HNH swimming class on 26th at 3.00pm.<br>
+* HNH Halloween trick-or-treat on 31st -- windy/chilly weather.</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Nov 2025</TD>
+<TD>
+* Shopping at Wegmans on 1st.<br>
 </HTML>                     
                        
                        
