--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6343,6 +6343,7 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Nov 2025</TD>
 <TD>
 * Shopping at Wegmans on 1st.<br>
+* NAM Diwali function at GB Temple -- 5.15pm to 10.15pm -- on 1st.<br>
 </HTML>                     
                        
                        
