--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6296,6 +6296,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH swimming class on 21st at 3.00pm.<br>
 * Shopping at Wegmans on 21st.<br>
 * HNH Play day (Badminton) at Ridgely on 27th.<br>
+* NPH haircut by PNH on 27th.<br>
 * Shopping at Sam's club and picked up HNH glasses from Target on 27th.<br>
 * Bought Apple 13in MacBook Air laptop on 28th (for NPH).<br>
 * HNH swimming class on 28th at 3.00pm.<br>
@@ -6344,6 +6345,10 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * Shopping at Wegmans on 1st.<br>
 * NAM Diwali function at GB Temple -- 5.15pm to 10.15pm -- on 1st.<br>
+* Watched MLB World Series between LA Dodgers and Toronto Blue Jays (LA won series 4-3 on 1st/2nd).<br>
+* HNH haircut by PNH on 2nd.<br>
+* NPH haircut at Floyd's on 3rd.<br>
+* 
 </HTML>                     
                        
                        
