--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6348,7 +6348,7 @@ PNH sightseeing on 5th-6th .<br>
 * Watched MLB World Series between LA Dodgers and Toronto Blue Jays (LA won series 4-3 on 1st/2nd).<br>
 * HNH haircut by PNH on 2nd.<br>
 * NPH haircut at Floyd's on 3rd.<br>
-* 
+* HNH swimming class on 5th at 7.30pm (make-up).<br>
 </HTML>                     
                        
                        
