--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6349,6 +6349,8 @@ PNH sightseeing on 5th-6th .<br>
 * HNH haircut by PNH on 2nd.<br>
 * NPH haircut at Floyd's on 3rd.<br>
 * HNH swimming class on 5th at 7.30pm (make-up).<br>
+* Shopping at Wegmans on 8th -- drive around to see fall colors.<br>
+* 
 </HTML>                     
                        
                        
