--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6335,6 +6335,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH flu vaccine at CVS (Minute Clinic) on 24th.<br>
 * Dinner pick up from Taco Bell on 24th.<br>
 * Shopping at Sam's Club on 25th.<br>
+* JPH-KPH did puja on Labh Pacham at new apartment on 26th.<br>
 * HNH swimming class on 26th at 3.00pm.<br>
 * HNH Halloween trick-or-treat on 31st -- windy/chilly weather.</TD>
 <TR>
