--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6346,12 +6346,14 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * Shopping at Wegmans on 1st.<br>
 * NAM Diwali function at GB Temple -- 5.15pm to 10.15pm -- on 1st.<br>
-* Watched MLB World Series between LA Dodgers and Toronto Blue Jays (LA won series 4-3 on 1st/2nd).<br>
+* Watched MLB World Series between LA Dodgers and Toronto Blue Jays (LA won series 4-3 on 1st-2nd).<br>
 * HNH haircut by PNH on 2nd.<br>
 * NPH haircut at Floyd's on 3rd.<br>
 * HNH swimming class on 5th at 7.30pm (make-up).<br>
+* NPH gave a 3.5-hour-long in-person interview at Muller (STScI) on 7th.<br>
 * Shopping at Wegmans on 8th -- drive around to see fall colors.<br>
-* 
+* HNH swimming class on 12th at 7.30pm (make-up).<br>
+
 </HTML>                     
                        
                        
