--- a/personal/memories.html
+++ b/personal/memories.html
@@ -4619,7 +4619,7 @@ PNH sightseeing on 5th-6th .<br>
 * House appraisal 'spot on' with the offer -- report on 2nd -- final step 'closing' on 17th June.<br>
 * Notice to Versailles on 2nd -- leaving by 31st July when lease ends.<br>
 * Dinner pick-up from Subway on 5th, drive at night to see Saxon Hill Dr neighborhood.<br>
-* NPH-HNH haircut by PNH on 6th.
+* NPH-HNH haircut by PNH on 6th.<br>
 * Shopping at Wegmans on 6th - another drive around Springdale community.<br>
 * New homeowner and auto insurance from Safeco on 8th, cancelled Nationwide auto policy.<br>
 * One Straw farm veggies pick-up from Muller on 9th.<br>
@@ -6353,7 +6353,8 @@ PNH sightseeing on 5th-6th .<br>
 * NPH gave a 3.5-hour-long in-person interview at Muller (STScI) on 7th.<br>
 * Shopping at Wegmans on 8th -- drive around to see fall colors.<br>
 * HNH swimming class on 12th at 7.30pm (make-up).<br>
-
+* HNH dance party at CMS on 13th -- NPH-PNH to Dulaney High School open night.<br>
+* 
 </HTML>                     
                        
                        
