--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6353,7 +6353,8 @@ PNH sightseeing on 5th-6th .<br>
 * NPH gave a 3.5-hour-long in-person interview at Muller (STScI) on 7th.<br>
 * Shopping at Wegmans on 8th -- drive around to see fall colors.<br>
 * HNH swimming class on 12th at 7.30pm (make-up).<br>
-* HNH dance party at CMS on 13th -- NPH-PNH to Dulaney High School open night.<br>
+* HNH dance party at CMS on 13th -- NPH-PNH to Dulaney High School 'Discovery Night'.<br>
+* Dinner pick-up from Pizza Hut on 13th.<br>
 * 
 </HTML>                     
                        
