--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6356,7 +6356,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH dance party at CMS on 13th -- NPH-PNH to Dulaney High School 'Discovery Night'.<br>
 * Dinner pick-up from Pizza Hut on 13th.<br>
 * Shopping at Sam's Club and Lowe's on 15th.<br>
-* HNH swimming class on 19th at 7.30pm (make-up) -- swimming classes done!.<br>
+* HNH swimming class on 19th at 7.30pm (last make-up) -- swimming classes done!.<br>
 * 
 </HTML>                     
                        
