--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6357,7 +6357,8 @@ PNH sightseeing on 5th-6th .<br>
 * Dinner pick-up from Pizza Hut on 13th.<br>
 * Shopping at Sam's Club and Lowe's on 15th.<br>
 * HNH swimming class on 19th at 7.30pm (last make-up) -- swimming classes done!.<br>
-* 
+* Dinner at Panera Bread, Ice cream at Cold Stone on 21st.<br>
+* Shopping at Wegmans on 22nd.<br>
 </HTML>                     
                        
                        
