--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6360,6 +6360,7 @@ PNH sightseeing on 5th-6th .<br>
 * Mazda completed 20,000 miles on 20th.<br>
 * Dinner at Panera Bread, Ice cream at Cold Stone on 21st.<br>
 * Shopping at Wegmans on 22nd.<br>
+* NPH got a tentative job offer (TJO) for a Patent Examiner (Physics) position from USPTO on the 26th.<br>
 </HTML>                     
                        
                        
