--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6361,6 +6361,14 @@ PNH sightseeing on 5th-6th .<br>
 * Dinner at Panera Bread, Ice cream at Cold Stone on 21st.<br>
 * Shopping at Wegmans on 22nd.<br>
 * NPH got a tentative job offer (TJO) for a Patent Examiner (Physics) position from USPTO on the 26th.<br>
+* Shopping at Kohl's on 28th, dinner pick-up from Qdoba.<br>
+* Mazda service and tire warning check-up. Shopping at Sam's Club on the 29th.</TD>
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Dec 2025</TD>
+<TD>
 </HTML>                     
                        
                        
