--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6350,7 +6350,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH haircut by PNH on 2nd.<br>
 * NPH haircut at Floyd's on 3rd.<br>
 * HNH swimming class on 5th at 7.30pm (make-up).<br>
-* NPH gave a 3.5-hour-long in-person interview at Muller (STScI) on 7th.<br>
+* NPH gave a 3.5-hour-long in-person interview at Muller (STScI) on 7th In the end, it didn't work).<br>
 * Shopping at Wegmans on 8th -- drive around to see fall colors.<br>
 * HNH swimming class on 12th at 7.30pm (make-up).<br>
 * HNH dance party at CMS on 13th -- NPH-PNH to Dulaney High School 'Discovery Night'.<br>
@@ -6369,6 +6369,8 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Dec 2025</TD>
 <TD>
+* NPH accepted USPTO TJO on 1st.<br>
+* 
 </HTML>                     
                        
                        
