--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6356,6 +6356,7 @@ PNH sightseeing on 5th-6th .<br>
 * HNH dance party at CMS on 13th -- NPH-PNH to Dulaney High School 'Discovery Night'.<br>
 * Dinner pick-up from Pizza Hut on 13th.<br>
 * Shopping at Sam's Club and Lowe's on 15th.<br>
+* NPH fingerprinting for BCPS at Hunt Valley office on 17th.<br>
 * HNH swimming class on 19th at 7.30pm (last make-up) -- swimming classes done!.<br>
 * Mazda completed 20,000 miles on 20th.<br>
 * Dinner at Panera Bread, Ice cream at Cold Stone on 21st.<br>
@@ -6370,7 +6371,11 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Dec 2025</TD>
 <TD>
 * NPH accepted USPTO TJO on 1st.<br>
-* 
+* HNH school winter concert on 3rd (6.30pm to 8.30pm) - Band/Trumpet.<br>
+* First light snow (~0.5in) of the season on 5th morning.<br>
+* PNH to WTES holiday party on 5th.<br>
+* Shopping at Wegmans, dinner at MOD Pizza on 6th.<br>
+* NPH fingerprinting for USPTO at Baltimore USAccess office on 8th.<br>
 </HTML>                     
                        
                        
