--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6376,6 +6376,8 @@ PNH sightseeing on 5th-6th .<br>
 * PNH to WTES holiday party on 5th.<br>
 * Shopping at Wegmans, dinner at MOD Pizza on 6th.<br>
 * NPH fingerprinting for USPTO at Baltimore USAccess office on 8th.<br>
+* NPH got a firm/final job offer (FJO) from USPTO on 9th -- accepted, job starting on 15th.<br>
+* HNH orthodontist appointment on 10th.<br>
 </HTML>                     
                        
                        
