--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6378,6 +6378,11 @@ PNH sightseeing on 5th-6th .<br>
 * NPH fingerprinting for USPTO at Baltimore USAccess office on 8th.<br>
 * NPH got a firm/final job offer (FJO) from USPTO on 9th -- accepted, job starting on 15th.<br>
 * HNH orthodontist appointment on 10th.<br>
+* Honda CRV 11th service on 12th.<br>
+* NPH haircut at Floyd's on 12th.<br>
+* Lunch at Sangam restaurant, old clothes donated at Goodwill on 13th.<br>
+* Shopping at Sam's Club on 13th.<br>
+* Snow fall (~4in) on 13th night/14th morning.<br>
 </HTML>                     
                        
                        
