--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6383,6 +6383,8 @@ PNH sightseeing on 5th-6th .<br>
 * Lunch at Sangam restaurant, old clothes donated at Goodwill on 13th.<br>
 * Shopping at Sam's Club on 13th.<br>
 * Snow fall (~4in) on 13th night/14th morning.<br>
+* BCPS school 2-hour delay on 15th morning.<br>
+* NPH started a new job at USPTO on 15th (~1.5 hour drive one way, Alexandria-VA).<br>
 </HTML>                     
                        
                        
