--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6308,7 +6308,7 @@ PNH sightseeing on 5th-6th .<br>
 </TR>
 <TD>Oct 2025</TD>
 <TD>
-* NPH applied for MD Unemployment Insurance (UI) benefits on 1st.<br>
+* NPH applied for MD Unemployment Insurance (UI) benefits on 1st (max. $430 per week).<br>
 * Sundarkand Path at Urmil Druv's place on 4th -- 2.15pm to 7.30pm.<br>
 * PNH received OCI on 4th.<br>
 * HNH swimming class on 5th at 3.00pm (NPH).<br>
@@ -6385,6 +6385,9 @@ PNH sightseeing on 5th-6th .<br>
 * Snow fall (~4in) on 13th night/14th morning.<br>
 * BCPS school 2-hour delay on 15th morning.<br>
 * NPH started a new job at USPTO on 15th (~1.5 hour drive one way, Alexandria-VA).<br>
+* NPH completed 1-week at USPTO on 19th (total ~700 miles driven, ~140 miles per day).<br>
+* Lunch at Taco Bell on 20th, shopping at Wegmans.<br>
+* 
 </HTML>                     
                        
                        
