--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6388,7 +6388,8 @@ PNH sightseeing on 5th-6th .<br>
 * NPH completed 1-week at USPTO on 19th (total ~700 miles driven, ~140 miles per day).<br>
 * Lunch at Taco Bell on 20th, shopping at Wegmans.<br>
 * Movie at Cinemark (Towson) -- The SpongeBob Movie: Search for SquarePants -- 4.30pm to 6.45pm -- on 24th.<br>
-
+* Shopping at Patel Brothers on 25th.<br>
+* 
 </HTML>                     
                        
                        
