--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6389,7 +6389,14 @@ PNH sightseeing on 5th-6th .<br>
 * Lunch at Taco Bell on 20th, shopping at Wegmans.<br>
 * Movie at Cinemark (Towson) -- The SpongeBob Movie: Search for SquarePants -- 4.30pm to 6.45pm -- on 24th.<br>
 * Shopping at Patel Brothers on 25th.<br>
-* 
+* Shopping at Wegmans on 27th.<br>
+
+<TR>
+<TD><HR></TD>
+<TD><HR></TD>
+</TR>
+<TD>Jan 2026</TD>
+<TD>
 </HTML>                     
                        
                        
