--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6390,13 +6390,16 @@ PNH sightseeing on 5th-6th .<br>
 * Movie at Cinemark (Towson) -- The SpongeBob Movie: Search for SquarePants -- 4.30pm to 6.45pm -- on 24th.<br>
 * Shopping at Patel Brothers on 25th.<br>
 * Shopping at Wegmans on 27th.<br>
-
+* HNH-PNH winter break from 24th to 4th Jan.<br>
+* USPTO closed from 24th to 28th, and 1st to 4th Jan.<br>
+* NPH took Mazda (2 days) to USPTO on 29th-30th.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
 </TR>
 <TD>Jan 2026</TD>
 <TD>
+* Light snow fall on 1st morning.<br>
 </HTML>                     
                        
                        
