--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6363,7 +6363,7 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 22nd.<br>
 * NPH got a tentative job offer (TJO) for a Patent Examiner (Physics) position from USPTO on the 26th.<br>
 * Shopping at Kohl's on 28th, dinner pick-up from Qdoba.<br>
-* Mazda service and tire warning check-up. Shopping at Sam's Club on the 29th.</TD>
+* Mazda service indicator and tire warning check-up. Shopping at Sam's Club on the 29th.</TD>
 <TR>
 <TD><HR></TD>
 <TD><HR></TD>
@@ -6400,6 +6400,10 @@ PNH sightseeing on 5th-6th .<br>
 <TD>Jan 2026</TD>
 <TD>
 * Light snow fall on 1st morning.<br>
+* Visited USPTO (and Museum) and Ambedkar staute on 2nd (1.15pm to 8pm).<br>
+* Dinner at Cava and Dunkin Donuts on 2nd.<br>
+* Mazda 5th service on 3rd.<br>
+* PNH Cologuard test on 3rd -- at home kit mailed back on 3rd.<br>
 </HTML>                     
                        
                        
