--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6401,9 +6401,11 @@ PNH sightseeing on 5th-6th .<br>
 <TD>
 * Light snow fall on 1st morning.<br>
 * Visited USPTO (and Museum) and Ambedkar staute on 2nd (1.15pm to 8pm).<br>
+* Shopping at Sam's Club on 2nd.<br>
 * Dinner at Cava and Dunkin Donuts on 2nd.<br>
 * Mazda 5th service on 3rd.<br>
-* PNH Cologuard test on 3rd -- at home kit mailed back on 3rd.<br>
+* PNH Cologuard test on 3rd -- at home kit mailed back on 3rd (normal result).<br>
+* Shopping at Wegmans on 10th.<br>
 </HTML>                     
                        
                        
