--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6406,6 +6406,8 @@ PNH sightseeing on 5th-6th .<br>
 * Mazda 5th service on 3rd.<br>
 * PNH Cologuard test on 3rd -- at home kit mailed back on 3rd (normal result).<br>
 * Shopping at Wegmans on 10th.<br>
+* NPH dental appointment (cleaning) on the 16th.<br>
+* 
 </HTML>                     
                        
                        
