--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6407,7 +6407,8 @@ PNH sightseeing on 5th-6th .<br>
 * PNH Cologuard test on 3rd -- at home kit mailed back on 3rd (normal result).<br>
 * Shopping at Wegmans on 10th.<br>
 * NPH dental appointment (cleaning) on the 16th.<br>
-* 
+* Snow fall (~1in) on 17th morning.<br>
+* Lunch at Baja Fresh, shoppiing at Wegmans on 17th.<br>
 </HTML>                     
                        
                        
