--- a/personal/memories.html
+++ b/personal/memories.html
@@ -6408,7 +6408,9 @@ PNH sightseeing on 5th-6th .<br>
 * Shopping at Wegmans on 10th.<br>
 * NPH dental appointment (cleaning) on the 16th.<br>
 * Snow fall (~1in) on 17th morning.<br>
-* Lunch at Baja Fresh, shoppiing at Wegmans on 17th.<br>
+* Lunch at Baja Fresh, shopping at Wegmans on 17th.<br>
+* Snow fall (~1in) on 18th morning.<br>
+* 
 </HTML>                     
                        
                        
